# dmux

./: .gitignore  .prettierignore  .snyk  .snykignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Package.resolved  Package.swift  README.md  README.zh-CN.md  build.sh  desktop-pet.html  eslint.config.js  package.json  pnpm-lock.yaml  release.sh  test-build.sh  vite.config.ts
.github/workflows/: release-build.yml  test-build.yml
BuildSupport/: dmux-Info.plist
Sources/DmuxWorkspace/: DmuxWorkspaceApp.swift  XcodeBundleModule.swift  main.swift
Tests/DmuxWorkspaceTests/: AIHistoryAggregationServiceTests.swift  AIProjectHistoryServiceTests.swift  AIRuntimeBridgeServiceHookConfigTests.swift  AIRuntimeIngressHookEventTests.swift  AIRuntimeIngressSocketTests.swift  AIRuntimePollingServiceTests.swift  AISessionStoreTests.swift  AIStatsStoreLiveTests.swift  AIStatsStoreMetricsTests.swift  AIUsageModelsTests.swift  AIUsageServiceTests.swift  AIUsageStoreTests.swift  AgentSessionTests.swift  AppDiagnosticsExportServiceTests.swift  AppModelActivityResolutionTests.swift  AppModelFocusSelectionTests.swift  AppRuntimePathsTests.swift  CodexPetTests.swift  CodexToolDriverTests.swift  CoduxSSHWrapperTests.swift  GhosttyEmbeddedConfigTests.swift  GhosttyPTYProcessBridgeTests.swift  GhosttyResizeTransitionTests.swift  GitWatcherTests.swift  KiroToolDriverTests.swift  MemoryContextServiceTests.swift  MemoryCoordinatorTests.swift  PetFeatureTests.swift  (+12 more)
dmux.xcodeproj/: project.pbxproj
docs/: runtime-regression.md
src/: App.tsx  appActions.ts  desktopPet.css  desktopPet.ts  desktopPetActivity.test.ts  desktopPetActivity.ts  i18n.ts  icons.tsx  ide.ts  main.tsx  projectSnapshotCache.ts  runtimeStore.ts  settings.ts  shortcuts.ts  styles.css  theme.ts  types.ts  windowing.ts  workspaceCommands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/infoplist/pt-BR.lproj/: InfoPlist.strings
src-tauri/runtime-assets/i18n/locales/: ai.json  common.json  files.json  git.json  menu.json  performance.json  settings.json  worktree.json
src-tauri/runtime-assets/scripts/wrappers/: tool-wrapper.cmd  tool-wrapper.ps1
src-tauri/src/: ai_history.rs  ai_history_indexer.rs  ai_runtime.rs  ai_usage_store.rs  app_info.rs  app_settings.rs  dialog.rs  git.rs  lib.rs  paths.rs  performance.rs  pet.rs  project_activity.rs  project_store.rs  remote_p2p.rs  terminal.rs  worktree.rs
(+232 files in other folders)
